# Verifiable-Differential-Privacy

./: Cargo.toml  README.md  Untitled.ipynb
benches/: ccs_benchmarks.rs  my_benchmark.rs
examples/: additive.rs  aggregation.rs  benchmark_noise.rs  biased_bernoulli.rs  binomial_mechanism.rs  com_aggregation.rs  commitment.rs  commitments.rs  committed_additive.rs  coms_input_verify.rs  counting_query.rs  fiat_shamir_creation.rs  fiat_shamir_verification.rs  full_simulation.rs  full_worked_out_example.rs  geometric_noise.rs  morra.rs  no_coms_input_verify.rs  no_dp_simulation.rs  pedersen.rs  poplar_simulation.rs  prio_simulation.rs  privacy_vs_latency.rs  range_proof.rs  schnorr_sigma.rs  schorr.rs  secret_sharing_comparison.rs  shamir.rs  simulation.rs
scripts_for_paper/: PlotsForPaper.ipynb  UsensixPlots.ipynb  accuracy_plots.py
src/: additive.rs  audit.rs  beaver_triple.rs  client.rs  committed_additive.rs  consants.rs  converters.rs  elliptic.rs  finite_field_coms.rs  generic_commitments.rs  lib.rs  participants.rs  pederson_additive.rs  poplar.rs  prio.rs  public_parameters.rs  server.rs  shamir.rs  sigma_ff.rs  simple_client.rs  simple_server.rs  sketching.rs  utils.rs  verifiable_client.rs
