[package]
name = "dp_client"
version = "0.1.0"
edition = "2021"
authors = ["Ari Biswas <aribiswas3@gmail.com>"]
description = "A pure-Rust implementation for auditable DP"
keywords = [
  "secret-sharing",
  "Shamir",
  "cryptography",
  "secure-computation",
  "mpc",
  "differential privacy"
]
[dependencies]
# rand = "0.8.5"
rand= { package = "rand", version = "0.8.5" }
rand_core = { version = "0.5.1"}
sha2 = "*"
openssl-sys = "0.9"
openssl = "0.10"
time = "*"
curve25519-dalek = "3"
sha3 = "*"
# num-bigint-dig = "0.8.2"
num-bigint = {version = "0.4.3", features = ["rand"]}
num-traits = "0.2.11"
num-integer = {version = "0.1.42", features = ["std", "i128"]}
# secp256k1 = {version = "0.25.0", features = ["rand-std", "serde"]}
grin_secp256k1zkp = "*"

[dev-dependencies]
criterion = "0.4"
serde = "*"
serde_json = "*"

[[bench]]
name = "ccs_benchmarks"
harness = false